--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -525,15 +525,9 @@ background-color: var(--verdigris);
 \*-----------------------------------*/
 
 .service-list {
-  display: flex;
-  overflow-x: auto;
-  scroll-behavior: smooth;
-  scroll-snap-type: x mandatory;
-  -webkit-overflow-scrolling: touch;
-  padding-block: 60px 30px;
+   padding-block: 60px 30px;
   padding-inline: 25px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 20px;
   border-radius: var(--radius-12);
   margin-block-start: -60px;
@@ -542,14 +536,16 @@ background-color: var(--verdigris);
 }
 
 
-.service-list { grid-template-columns: 1fr; }
 
-.service-card { text-align: center;
-  transition: transform .3s ease;
-height: 100%; }
+.service-card { 
+  width: auto;
+  text-align: center;
+  height: 100%; 
+}
 
-.service-card:hover {
-  transform: translateY(-8px);
+.service-card .card-icon {
+  max-width: max-content;
+  margin-inline: auto;
 }
 
 .service-card .card-icon { margin-block-end: 25px; }
@@ -894,7 +890,7 @@ display: none;
 .footer-contact-item {
   display: flex;
   align-items: flex-start;
-  gap: 12px;
+  gap: 5px;
   margin-block-start: 12px;
 }
 .footer-item-item {
@@ -1105,6 +1101,7 @@ display: none;
 
 
 
+  .service-list { grid-template-columns: 1fr 1fr; }
 
 
   /**
@@ -1199,7 +1196,7 @@ display: none;
 
   /* Desktop: display service items as a horizontal carousel showing 4 items */
   
-
+  .service-list { grid-template-columns: repeat(4, 1fr); }
   
 
  
@@ -1826,7 +1823,7 @@ display: none;
 #contact-details h2 {
   font-size: 3.2rem;
   margin: 1.2rem 0 3rem;
-  color: var(--verdigris);
+  color: var(--green);
 }
 
 .contact-content {
@@ -1892,11 +1889,7 @@ display: none;
   }
 }
 
-  
- /*-----------------------------------*\
-  contact  form Details
-\*-----------------------------------*/
- 
+
   /*-----------------------------------*\
   people / team / contact us page
 \*-----------------------------------*/
@@ -2239,95 +2232,51 @@ padding: 0rem;
   line-height: 1.6;
 }
 
-/*-----------------------------------*\
-  Appointment page 
-\*-----------------------------------*/
-
-.book .row{
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  gap:2rem;
-}
-
-.book .row .image{
-  flex:1 1 45rem;
-}
-
-.book .row .image img{
-  width: 100%;
-}
-
-.book .row form{
-  flex:1 1 45rem;
-  background: #fff;
-  border:var(--border);
-  text-transform: uppercase;
-  box-shadow: var(--box-shadow);
-  text-align: center;
-  padding: 2rem;
-  border-radius: .5rem;
-}
-
-.book .row form h3{
-  color:var(--black);
-  padding-bottom: 1rem;
-  font-size: 3rem;
-  text-transform: uppercase;
-}
-
-.book .row form .box{
-  width: 100%;
-  margin:.7rem 0;
-  border-radius: .5rem;
-  border:var(--border);
-  font-size: 1.6rem;
-  color: var(--black);
-  text-transform: none;
-  padding: 1rem;
-}
-
-.book .row form .btn{
-  padding:1rem 4rem;
-  text-transform: uppercase;
-}
 
 
 /*-----------------------------------*\
   review section
 \*-----------------------------------*/
 
-.review .box {
-    opacity: 0;
-    transform: translateY(40px);
-    transition: all 0.5s ease;
-}
-
-
-.review .box.show {
-    opacity: 1;
-    transform: translateY(0);
-}
-.review .box:nth-child(1) { transition-delay: 0.1s; }
-.review .box:nth-child(2) { transition-delay: 0.2s; }
-.review .box:nth-child(3) { transition-delay: 0.2s; }
-
 .review {
+  display: grid;
+  gap: 10px;
   background: #f7f9fa;
   padding: 6rem 0;
+}
+.review .review-container{
+  width: 100%;
+  max-width: 1500px;
+  
+   margin-inline: auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
+  gap:2rem;
+  margin-bottom: 5rem;
+}
+.review .review-card{
+   max-width: max-content;
+   margin-inline: auto;
 }
 
 
 /* CARD */
+
 .review-card {
   background: #fff;
+   border:var(--border);
+  box-shadow: var(--box-shadow);
   border-radius: 1.4rem;
   padding: 4.5rem 2.5rem 3rem;
   text-align: center;
   box-shadow: 0 12px 30px rgba(0,0,0,.08);
   position: relative;
   height: auto;
+    overflow: hidden;
+  z-index: 0;
 }
+
+
 
 /* accent top */
 .review-card::before {
@@ -2339,26 +2288,17 @@ padding: 0rem;
   border-radius: 1.4rem 1.4rem 0 0;
 }
 
-/* quote */
-.review-card::after {
-  content: '“';
-  position: absolute;
-  top: 1.5rem;
-  right: 2rem;
-  font-size: 6rem;
-  color: rgba(255,255,255,.25);
-  font-family: serif;
-}
+
 
 /* avatar */
 .review-card img {
   width: 9.6rem;
   height: 9.6rem;
   border-radius: 50%;
-  object-fit: cover;
   border: .5rem solid #fff;
   margin-top: -7rem;
   background: #fff;
+   z-index: 1000;
 }
 
 /* name */
